# django-powcaptcha

./: README.md  pyproject.toml  setup.py
django_powcaptcha/: __init__.py  client.py  forms.py  widgets.py
django_powcaptcha/templates/django_powcaptcha/: widget.html
