[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-powcaptcha"
version = "0.0.5"
description = "Django PowCaptcha form field/widget app."
readme = "README.md"
authors = [
    {name = "Jean-Philippe Bidegain", email = "jp@bidega.in"}
]
license = {text = "BSD"}
keywords = ["django", "powcaptcha"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "django",
]

[project.urls]
Homepage = "https://github.com/aeyoll/django-powcaptcha"
Changelog = "https://github.com/aeyoll/django-powcaptcha/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/aeyoll/django-powcaptcha/issues"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["django_powcaptcha*"]

[tool.setuptools.package-data]
django_powcaptcha = ["templates/**/*"]

[bumpver]
current_version = "0.0.5"
version_pattern = "MAJOR.MINOR.PATCH"

[bumpver.file_patterns]
"pyproject.toml" = [
  "version = \"{version}\"$",
]
